# docmind-backend

./: .cmd  .env.example  .pre-commit-config.yaml  custom_types.py  data_loader.py  database.py  main.py  pyproject.toml
